add_library(binary_search ${CMAKE_CURRENT_SOURCE_DIR}/binary_search.cc)
add_library(cache ${CMAKE_CURRENT_SOURCE_DIR}/cache.cc)
add_library(bag ${CMAKE_CURRENT_SOURCE_DIR}/bag.cc)
add_library(kmp ${CMAKE_CURRENT_SOURCE_DIR}/kmp.cc)
add_library(single_stack ${CMAKE_CURRENT_SOURCE_DIR}/single_stack.cc)
add_library(union_set ${CMAKE_CURRENT_SOURCE_DIR}/union_set.cc)
add_library(sort ${CMAKE_CURRENT_SOURCE_DIR}/sort.cc)
add_library(prefix_tree ${CMAKE_CURRENT_SOURCE_DIR}/prefix_tree.cc)
add_library(tree_order ${CMAKE_CURRENT_SOURCE_DIR}/tree_order.cc)